grammar.txt
(* this is a multiline comment *)
// this is also a comment, but single line

const:
   [0-9]+

ident:
   [:alpha:] [:alnum:]*

var:
   ident

rf:
   expr

expr:
   add-expr
  
primary-expr: const 
    | var
    | fun-call
    | "(" expr ")"

mult-expr: primary-expr [ "*" mult-expr ]
add-expr: mult-expr [ addop mult-expr ]
addop: "+" | "-"

rel-expr: expr rel-op expr
rel-op: ">" | ">=" | "<" | "<=" | "<>" | "=" 

bool-expr: rel-expr [ bool-op bool-expr ]
bool-op: "and" | "or"

stm-list: stm [ ";" stm-list]

stm: "skip"
   | "if" bool-expr "then" stm-list [";"] "else" stm-list [";"] "end" "if"
   | "while" bool-expr "upto" expr "do" stm-list [";"] "end" "while"
   | var ":=" expr
   | fun-call

fun-call: | ident "(" arg-list ")"
          | ident "::" ident "(" arg-list ")"
     

fundef: "function" ident "(" parm-ety ")" stm-list [";"] "end" "function"

parm-ety: $ | parm
parm: var ["," parm]
arg-ety: $ | arg
arg: expr ["," expr]

def-list: $ | fundef def-list

prog: def-list
